# CalebsRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Assets/Models/Raket/: Raket.mtl
Assets/Models/cat/: concrete_cat_statue_4k.mtl
Assets/Models/cat/textures/: concrete_cat_statue_metal_4k.exr
Assets/Models/peasant/: peasant.dae
Assets/Models/suitcase/: vintage_suitcase_4k.blend  vintage_suitcase_4k.mtl
Assets/Models/sun/: sun.mtl
Assets/Shaders/: exFragment.frag  tiles.frag  tiles.vert
Shaders/: exFragment.frag  exVertex.vert
include/: sdl2
include/assimp/: IOSystem.hpp  Importer.hpp  material.h  texture.h
include/glm/: CMakeLists.txt
include/glm/ext/: matrix_clip_space.hpp  matrix_transform.hpp
include/imgui/: imgui.cpp  imgui_impl_sdl2.cpp  imgui_internal.h
include/stb-master/docs/: stb_howto.txt
include/stb-master/tests/: stb_c_lexer_fuzzer.cpp  test_ds_cpp.cpp
lib/: SDL_image  sdl2
lib/glew/lib/cmake/glew/: glew-config.cmake  glew-targets.cmake
models/: Capoeira.dae
src/: Camera.cpp  Light.cpp  MainGame.cpp  Mesh.cpp  Model.cpp  OpenGLWindow.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp  main.cpp
src/Editor/: Editor.cpp  Editor.h  EditorControls.cpp  EditorControls.h  EditorMain.cpp  EditorWindow.cpp  EditorWindow.h
src/Entities/: Entity.cpp  Entity.h  Hitbox.cpp  Hitbox.h  Player.cpp  Player.h
src/Environment/Light/: Light.cpp  Light.h
src/Environment/Skybox/: Skybox.cpp  Skybox.h
src/Game/: Game.cpp  Game.h  GameMain.cpp
src/Geometry/LevelGeometry/: Tile.cpp  Tile.h  TileUtil.cpp  TileWrapper.cpp  TileWrapper.h
src/Geometry/LevelGeometry/Box/: Box.cpp  Box.h  BoxAccess.cpp
src/Geometry/LevelGeometry/TileTypes/: SquareTile.cpp  SquareTile.h  Tile.cpp  Tile.h
src/Geometry/Light/: Light.h
src/Geometry/Models/: AssimpGLMHelpers.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/Geometry/Scene/: Scene.cpp  Scene.h
src/Geometry/Skybox/: Skybox.cpp
src/Geometry/Textures/: Texture.cpp  Texture.h  TextureUtil.cpp
src/Headers/: Camera.h  Light.h  MainGame.h  Mesh.h  Model.h  OpenGLWindow.h  Shader.h  Texture.h  TextureManager.h  stb_image.cpp  stb_image.h
src/Physics/: CollisionDetector.cpp  Physics.cpp  Physics.h
src/Rendering/: Camera.cpp  Camera.h  Light.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Renderer.h  Shader.cpp
src/Rendering/Light/: Light.cpp  Light.h
src/Rendering/Models/: AssimpGLMHelpers.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/Rendering/Scene/: ModelInfo.h  Read.cpp  Scene.h  SceneLoader.h  Serialize.cpp  Store.cpp
src/Rendering/Skybox/: Skybox.cpp  Skybox.h
src/Scene/: ModelInfo.h  Read.cpp  Scene.cpp  Scene.h  SceneLoader.h  Serialize.cpp  Store.cpp
src/UI/: UI.cpp  UI.h  UIGlobals.cpp  UIMacros.h  UIUtil.cpp  UIWindows.cpp
src/UI/Windows/: BoxMacros.h  BoxWindow.cpp  LightMacros.h  LightWindow.cpp  MainWindow.cpp  ModelMacros.h  ModelWindow.cpp  SceneWindow.cpp  SkyboxWindow.cpp  boxMacros.h
src/main/: MainGame.cpp  MainGame.h  OpenGLWindow.cpp  OpenGLWindow.h  main.cpp
src/model_tester/: assimp_sandbox.cpp
